<resources>
    <string name="app_name">PetiQuiz</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="skip_button">Skip</string>
    <string name="cheat_button">Cheat</string>
    <string name="restart_button">Restart quiz</string>
    <string name="questions_button">See questions</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_oceans">The Pacific Ocean is larger than
    the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
    and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
    in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
    freshwater lake.</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
